[package]
name = "cchmod"
version = "0.1.4"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT"
description = "chmod calculator."
homepage = "https://github.com/mirryi/cchmod"
repository = "https://github.com/mirryi/cchmod.git"
edition = "2021"

[package.metadata]
msrv = "1.76.0"

[[bin]]
name = "cchmod"
path = "src/bin/cchmod.rs"

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
doc-comment = "0.3"
thiserror = "1.0.59"
